--- a/Code/PXSteamCLITest/PXSteamCLITest.csproj
+++ b/Code/PXSteamCLITest/PXSteamCLITest.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="PXSteamCLI">
-      <HintPath>..\x64\Debug\PXSteamCLI.dll</HintPath>
-      <Private>true</Private>
-    </Reference>
+    <ProjectReference Include="..\PXSteamCLI\PXSteamCLI.vcxproj" />
   </ItemGroup>
 
 </Project>
